# wasm96-v-sdk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SDKs.md  justfile  main.v  v.mod  wasm96.v
example/rust-guest/: Cargo.toml  README.md
example/rust-guest-mp-platformer/: Cargo.toml
example/rust-guest-osmosis/: Cargo.toml
example/rust-guest-osmosis/src/: lib.rs
example/rust-guest-showcase/: Cargo.toml  README.md
example/rust-guest-showcase/src/: lib.rs
example/rust-guest/src/: lib.rs
example/zig-guest/src/: main.zig
sdk-assemblyscript/: README.md  asconfig.json  package.json  tsconfig.json
sdk-assemblyscript/assembly/: index.as
sdk-c/: README.md  wasm96.h
sdk-c/include/: wasm96.h
sdk-cpp/: README.md  wasm96.hpp
sdk-cpp/include/: wasm96.hpp
sdk-d/: README.md  dub.json
sdk-d/source/wasm96/: package.d
sdk-go/: README.md  go.mod
sdk-go/wasm96/: wasm96.go
sdk-zig/: README.md  build.zig.zon  wasm96.zig
src/: lib.rs
wasm96-core/: Cargo.toml
wasm96-core/src/: lib.rs
wasm96-core/src/abi/: mod.rs
wasm96-core/src/av/: audio.rs  graphics.rs  mod.rs  resources.rs  storage.rs  tests.rs  utils.rs
wasm96-core/src/input/: mod.rs
wasm96-core/src/loader/: mod.rs
wasm96-core/src/runtime/: imports.rs  mod.rs  runtime.rs
wasm96-core/src/state/: mod.rs
wasm96-cpp-sdk/: .clangd  CMakeLists.txt  README.md  justfile  main.cpp  wasm96.cpp  wasm96_cpp.h  zig-toolchain.cmake
wasm96-sdk/: Cargo.toml  README.md  build.rs
wasm96-sdk/src/: lib.rs
wasm96-zig-sdk/src/: main.zig
wit/: wasm96.wit
