[workspace]
resolver = "3"
members = [
  "wasm96-core",
  "wasm96-sdk",
]

# Optional: allows `cargo build` at the workspace root to default to building the core.
default-members = ["wasm96-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# Fill these in if you want (not required):
# authors = ["Your Name <you@example.com>"]
# repository = "https://github.com/you/wasm96"
# homepage = "https://github.com/you/wasm96"
# documentation = "https://github.com/you/wasm96"

[workspace.dependencies]
# Core dependencies
libretro-backend = "0.2.1"
wasmer = "6.1.0"

# SDK dependencies (safe defaults for wasm32 targets; keep minimal)
# `wee_alloc` is optional but commonly useful in wasm apps; app authors can opt-in.
wee_alloc = "0.4.5"
