[workspace]
resolver = "3"
members = [
  "wasm96-core",
  "wasm96-sdk",
  "example/rust-guest",
  "example/rust-guest-mp-platformer",
  "example/rust-guest-showcase",
]

# Optional: allows `cargo build` at the workspace root to default to building the core.
default-members = ["wasm96-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# Fill these in if you want (not required):
authors = ["isaiahpettingill"]
repository = "https://github.com/isaiahpettingill/wasm96"
homepage = "https://github.com/isaiahpettingill/wasm96"
documentation = "https://github.com/isaiahpettingill/wasm96"

[workspace.dependencies]
# Core dependencies
libretro-backend = "0.2.1"

# Runtime
# Keep Wasmer temporarily for non-core crates until wasm96-core is fully migrated.
wasmer = "6.1.0"
wasmtime = "28.0.1"
wasmtime-wasi = "28.0.1"
wasi-common = "28.0.1"

# SDK dependencies (safe defaults for wasm32 targets; keep minimal)
# `wee_alloc` is optional but commonly useful in wasm apps; app authors can opt-in.
wee_alloc = "0.4.5"
