[package]
name = "rust_guest_osmosis"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

# Prevent this example crate from being built/tested as part of native (host) workspace CI.
# It's intended to be compiled for `wasm32-unknown-unknown` and loaded by `wasm96-core`.
autoexamples = false
autobins = false
autotests = false
autobenches = false

[lib]
# Guest is a WASM module loaded by wasm96-core, so build as a cdylib.
crate-type = ["cdylib"]
# Do not build this crate by default unless explicitly requested.
test = false
doctest = false
bench = false

[dependencies]
# Depend on the workspace SDK crate via relative path.
wasm96-sdk = { path = "../../wasm96-sdk", default-features = false }
libm = "0.2"

[features]
# Default to std for easier development; you can disable for wasm32-unknown-unknown if desired.
default = ["std"]
std = ["wasm96-sdk/std"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
